overhaul: removed backend and added volume meters

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,7 @@
     </div>
 </mat-toolbar>
 <div class="router">
-    <router-outlet></router-outlet>
+    @if (loaded) {
+    <app-slider-page></app-slider-page>
+    }
 </div>
