--- a/src/app/dialogs/server-connection-dialog/server-connection-dialog.component.html
+++ b/src/app/dialogs/server-connection-dialog/server-connection-dialog.component.html
@@ -2,17 +2,45 @@
 <div mat-dialog-content>
     <div class="p-2">
         <p>
-            It doesnt look like your connected to a server. Enter your server
-            address below!
+            It doesn't look like you're connected to a server. Enter your server
+            details below!
         </p>
-        <mat-form-field appearance="outline" class="full-width pt-2">
-            <mat-label>Server Address</mat-label>
-            <input
-                matInput
-                [formControl]="serverAddressControl"
-                placeholder="http://localhost:3000"
-            />
-        </mat-form-field>
+
+        <!-- Bind the form to the FormGroup -->
+        <form [formGroup]="connectionForm">
+            <!-- Server Address Input -->
+            <mat-form-field appearance="outline" class="full-width pt-2">
+                <mat-label>Server Address</mat-label>
+                <input
+                    matInput
+                    formControlName="serverAddress"
+                    placeholder="http://localhost"
+                />
+            </mat-form-field>
+
+            <!-- Port Number Input -->
+            <mat-form-field appearance="outline" class="full-width pt-2">
+                <mat-label>Port Number</mat-label>
+                <input
+                    matInput
+                    type="number"
+                    formControlName="port"
+                    placeholder="3000"
+                />
+            </mat-form-field>
+
+            <!-- Password Input -->
+            <mat-form-field appearance="outline" class="full-width pt-2">
+                <mat-label>Password</mat-label>
+                <input
+                    matInput
+                    type="password"
+                    formControlName="password"
+                    placeholder="Enter your password"
+                />
+            </mat-form-field>
+        </form>
+
         <mat-expansion-panel class="mb-5">
             <mat-expansion-panel-header>
                 <mat-panel-title>Need help?</mat-panel-title>
@@ -31,19 +59,18 @@
         </mat-expansion-panel>
     </div>
 </div>
+
 <div mat-dialog-actions align="end">
     <div
         [matTooltip]="
-            serverAddressControl.invalid
-                ? 'Enter a valid address to continue'
-                : ''
+            connectionForm.invalid ? 'Enter valid details to continue' : ''
         "
     >
         <button
             mat-raised-button
             color="primary"
             (click)="submit()"
-            [disabled]="serverAddressControl.invalid"
+            [disabled]="connectionForm.invalid"
         >
             Connect
         </button>
